<resources>
    <string name="app_name">MotionDetectionAlert</string>
    <string name="join">Join</string>
    <string name="main_title1">Motion Detection</string>
    <string name="main_title2">Alert</string>
    <string name="autologin">자동로그인</string>
    <string name="edittext_id">Id</string>
    <string name="edittext_password">Password</string>
    <string name="login">Login</string>
    <string name="start">시작</string>
    <string name="gallery">갤러리</string>
    <string name="setting">설정</string>
    <string name="device"><![CDATA[기기:<기기 이름>]]></string>
    <string name="login_setting">로그인 설정</string>
    <string name="alert_setting">알림 설정</string>
    <string name="camera_setting">카메라 설정</string>
    <string name="timer_setting">타이머 설정</string>
    <string name="loginsetting">로그인 설정</string>
    <string name="changepassword">비밀번호 변경</string>
    <string name="change">변경하기</string>
    <string name="newpw">새 비밀번호 입력</string>
    <string name="newpwcheck">새 비밀번호 입력 확인</string>
    <string name="deleteaccount">회원 탈퇴</string>
</resources>
