<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp">

            <Button
                android:id="@+id/Button_backspace"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/backspace"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginsetting"
                android:textSize="35dp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changepassword"
            android:textSize="30dp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/EditText_newpw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/newpw"
            android:inputType="textPersonName"
            android:background="@drawable/edittext_password"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/EditText_newpwcheck"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/newpwcheck"
            android:inputType="textPersonName"
            android:background="@drawable/edittext_password"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/Button_change"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/button_red"
            android:text="@string/change"
            android:textSize="17dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/Button_deleteaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteaccount"
            android:textSize="30dp"
            android:gravity="start"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:background="@null"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>