<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#D9AFAF">

        <Button
            android:id="@+id/Button_join"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@drawable/button_red"
            android:text="@string/join"
            android:textSize="17dp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_title1"
                android:textSize="30dp"
                android:layout_marginTop="60dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_title2"
                android:textSize="30dp"
                android:textColor="@android:color/black"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@null"
                android:src="@drawable/logo"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/edittext_white"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:src="@drawable/user"/>

                <EditText
                    android:id="@+id/EditText_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:hint="@string/edittext_id"
                    android:inputType="textPersonName"
                    android:background="@drawable/edittext_white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/edittext_white"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:src="@drawable/key"
                    android:padding="5dp"/>

                <EditText
                    android:id="@+id/EditText_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:hint="@string/edittext_password"
                    android:inputType="textWebPassword"
                    android:background="@drawable/edittext_white"/>

            </LinearLayout>

            <Button
                android:id="@+id/Button_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button_red"
                android:text="@string/login"
                android:textSize="17dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>